- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.2.0 FF
 
I don't know which component to select here.
Starting in August 2021, all apps which are uploaded to the google app store must target SDK version 30. Given that the Qt 6.2 release candidate is scheduled for September, Qt 6.2 should target SDK verion 30 by default.
For development, we should switch to SDK version 30 asap to make sure our software is not affected by these changes.
assam alexivanoff vuokko would you agree?
https://developer.android.com/distribute/best-practices/develop/target-sdk