Update Android default SDK from 29 to 30

By the time of Qt 6.2 release all new apps targeting Play store must
target API level 30 (Android 11) or above (starting in 08/2021 for
new apps and 11/2021 for existing apps' updates).

Task-number: QTBUG-94451
Change-Id: Id7fa2fd62899a7259e365c917292c6c3ac0d2b0d
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 17d7a8dc2e2df577a769cd84cba946a726e8872a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>